RESOLVED FIXED148977
[Win] Compile errors in inspector code.
https://bugs.webkit.org/show_bug.cgi?id=148977
Summary [Win] Compile errors in inspector code.
peavo
Reported 2015-09-08 13:36:48 PDT
C:\Users\Alex\Documents\WinCairoBot\win-cairo-release\build\WebKitBuild\Release\DerivedSources\ForwardingHeaders\wtf/Ref.h(56): error C2027: use of undefined type 'Inspector::FrontendRouter'
Attachments
Patch (2.04 KB, patch)
2015-09-08 13:45 PDT, peavo
no flags
peavo
Comment 1 2015-09-08 13:45:08 PDT
Alex Christensen
Comment 2 2015-09-08 14:08:11 PDT
Comment on attachment 260789 [details] Patch This is exactly what I just tried. r=me
WebKit Commit Bot
Comment 3 2015-09-08 14:56:32 PDT
Comment on attachment 260789 [details] Patch Clearing flags on attachment: 260789 Committed r189506: <http://trac.webkit.org/changeset/189506>
WebKit Commit Bot
Comment 4 2015-09-08 14:56:36 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 5 2015-09-09 00:21:53 PDT
(In reply to comment #2) > Comment on attachment 260789 [details] > Patch > > This is exactly what I just tried. r=me Thanks for reviewing :)
Note You need to log in before you can comment on or make changes to this bug.