[Win] Compile errors in inspector code. https://bugs.webkit.org/show_bug.cgi?id=148977

Reviewed by Alex Christensen.

Include definition of class FrontendRouter before use.

* inspector/InspectorBackendDispatcher.h:
* inspector/JSGlobalObjectInspectorController.h:


Canonical link: https://commits.webkit.org/167060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189506 268f45cc-cd09-0410-ab3c-d52691b4dbfc